# Sistema-gestao-de-presenca-e-merenda-escolar

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/academic/: apps.py  models.py
backend/app/academic/migrations/: 0001_initial.py
backend/app/canteen/: apps.py  models.py
backend/app/canteen/api/: dependencies.py  schemas.py  views.py
backend/app/canteen/application/: dtos.py  use_cases.py
backend/app/canteen/domain/: entities.py  exceptions.py  repositories.py  servicies.py
backend/app/canteen/infrastructure/: models.py  repository.py  service.py
backend/app/canteen/migrations/: 0001_initial.py  0002_alter_dailymenu_date.py
backend/app/presence/domain/: role.py
backend/app/presence/infrastructure/: models.py
backend/app/school/: apps.py  models.py
backend/app/school/api/: bearer.py  dependencies.py  schemas.py  views.py
backend/app/school/application/: dtos.py  use_cases.py
backend/app/school/domain/: entites.py  exceptions.py  repositories.py  role.py  servicies.py  value_objects.py
backend/app/school/infrastructure/: models.py  repository.py  services.py
backend/app/school/migrations/: 0001_initial.py  0002_manager.py  0003_rename_school_id_manager_school.py  0004_refreshtoken.py
backend/config/: api.py  settings.py  urls.py
backend/core/: exceptions.py
backend/fluxograma/: Entidades.drawio
fluxograma/: .$FluxoDados.drawio.bkp  FluxoDados.drawio
