[project]
name = "presenca-merenda-escolar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=22.1.0",
    "blue>=0.9.1",
    "dependency-injector>=4.49.1",
    "django>=6.0.7",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.6.2",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
]
